# MakeMoneyGUI

./: README.md  build.py  entry.py  pyproject.toml  开发步骤.txt
cache/: 000002.pkl  000006.pkl  000007.pkl  000008.pkl  000009.pkl  000010.pkl  000011.pkl  000012.pkl  000014.pkl  000016.pkl  000017.pkl  000019.pkl  000020.pkl  000021.pkl  000025.pkl  000026.pkl  000027.pkl  000028.pkl  000029.pkl  000030.pkl  000031.pkl  000032.pkl  000034.pkl  000035.pkl  000036.pkl  000037.pkl  000038.pkl  000039.pkl  000042.pkl  000045.pkl  000048.pkl  000049.pkl  000050.pkl  000055.pkl  000056.pkl  000058.pkl  000059.pkl  000060.pkl  000061.pkl  000062.pkl  (+3060 more)
test/: back_best.py  main.py  weekly_boll.py
ui_page/: page_one.ui  page_three.ui  page_two.ui  ui_page_one.py  ui_page_three.py  ui_page_two.py
ui_view/: login_window.ui
view/: main_window.py
view/pages/: page_back_test.py  page_back_test_handler.py  page_boll_find.py  page_boll_find_handler.py  page_one.py  page_one_handler.py  page_stock_update.py  page_stock_update_handler.py  page_two.py
view/policy/: boll_break.py  stock.py
